Version ClaSS-0.8.1 release (2006/11/09)
---------------------------------------------------- 

Changed password to pin for the staff_details form, added list_role,
and used list_book for the firstbookpref.

Changed naming of teacher id and staff no in the entrybook.

Moved the setting of $tab=1 into the head_options.

A statement of intent, adding library, medical, and sen to the array
of user roles - even though they don't yet do anything.

Removed the limitation of needing all books enabled for the 'admin'
role by adding a non-ole to the the books array called 'all'. This now
takes care of telling index.php about pre-loading all viewbooks. 

Added seneeds book which displays just sids flagged with SEN='Y'. Uses
a new getSENPerm to allow access for pastoral and sen responsibles to
change the sen records.

Now check for admin role in report_reports and for users with more
than one pastoral responsibility.